// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toast > renders the toast component with icon 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="inline-flex h-8 items-center gap-3 rounded-[4px] bg-success pl-5 text-body-sm pr-7 text-white"
  role="alert"
>
  <span
    aria-label="Mood"
    class="material-symbols-outlined size-24 select-none"
    role="img"
  >
    mood
  </span>
  This is a toast message
</div>
`;

exports[`Toast > renders the toast component with text 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="inline-flex h-8 items-center gap-3 rounded-[4px] bg-success pl-5 text-body-sm pr-5 text-white"
  role="alert"
>
  This is a toast message
</div>
`;
